depends_compile_tests/tests/fail/derive/dependencies/unnamed_fields.rs
use depends::derives::Dependencies;

#[derive(Dependencies)]
struct Bar(usize, usize, usize);

fn main() {}
