depends_compile_tests/tests/fail/derive/dependencies/unnamed_fields.stderr
error: Must be a struct with named fields.
 --> tests/fail/derive/dependencies/unnamed_fields.rs:3:10
  |
3 | #[derive(Dependencies)]
  |          ^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Dependencies` (in Nightly builds, run with -Z macro-backtrace for more info)
